--- a/examples/index.html
+++ b/examples/index.html
@@ -3,18 +3,30 @@
     <head>
         <meta charset="utf-8">
         <title>DockspaceJS - Examples</title>
+        <link rel="stylesheet" type="text/css" media="screen" href="css/docs.css">
     </head>
     <body>
 
-        View examples:
+        <div id="docs">
+            <div id="docs-header">
+                DockspaceJS
+            </div>
+            <div id="docs-container">
+                <div id="docs-sidebar">
+                    <h4>View examples</h4>
 
-        <ul>
-            <li><a href="01-panes.html">Example 1: Setting up panes</a></li>
-            <li><a href="02-row-container.html">Example 2: A row container</a></li>
-            <li><a href="03-grow-factor.html">Example 3: Set the grow factor</a></li>
-            <li><a href="04-no-interaction.html">Example 4: No interaction</a></li>
-            <li><a href="05-splitter-size.html">Example 5: Splitter size</a></li>
-        </ul>
+                    <ul id="docs-side-bar-menu">
+                    </ul>
+                </div>
+                <div id="docs-content">
+                    <p>
+                        Please pick an example to view.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <script src="js/docs.js"></script>
 
     </body>
 </html>
